--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -11,11 +11,11 @@ Qu'est-ce qu'un algorithme?
 \begin{mydef}[Algorithme]
 	C'est une procédure qui peut être appliquée à n'importe
 	quelle donnée et qui a pour effet de produire un résultat. C'est un ensemble fini
-	d'instructions qui peuvent être exécutées. Dans cette partie du cours, on ne prend pas  en compte la taille des données, des instructions ni de la mémoire disponible, mais on les considère comme finies.
+	d'instructions qui peuvent être exécutées. Dans cette partie du cours, on ne prend pas en compte la taille des données, la taille des instructions, ni même la taille de la mémoire disponible, mais on les considère comme finies.
 \end{mydef}
 
 \begin{myrem}
-	Un algorithme n'est pas une fonction, mais un algorithme calcule une fonction ou une extension de fonction.
+	Un algorithme n'est pas une fonction, mais un algorithme calcule une fonction ou une extension de fonction. Il y a le monde des fonctions et le monde des programmes (algorithmes). Ils sont liés entre eux mais ne sont absolument pas les mêmes objets.
 	De plus dans le cours on se limite aux fonctions de $\N^n$ dans $\N$. En effet cela revient au même de considérer les fonctions de $\N^n$ dans $\N^n$ (
 	$\N^n$ est énumérable, il existe donc une bijection avec $\N$). On va aussi
 	utiliser Java comme modèle étant donné que c'est plus facile et qu'on va montrer
@@ -65,6 +65,10 @@ Soit $A\subseteq \N$
 	. L'algorithme décide si $x$ est dans $A$ ou non.
 \end{mydef}
 
+\begin{myrem}
+	Récursif $\neq$ récursivité au sens Java du terme.
+\end{myrem}
+
 \begin{mydef}[Ensemble récursivement énumérable] \label{def:recursivement enum}
 	Un ensemble $A$ est récursivement énumérable ($\in RE$) s’il existe un algorithme qui recevant
 	un $x\in \N$,
@@ -81,8 +85,8 @@ Soit $A\subseteq \N$
 
 \begin{myrem}
 	Le souci avec les ensembles récursivement énumérables,
-	c'est que même si l'algorithme permet de dire si $x$ est dans $A$, si $x$
-	n'est pas dans $A$ on ne sait rien dire. En effet, on ne peut pas dire à un moment qu'on
+	c'est que même si l'algorithme permet de dire si $x$ est dans $A$, à partir du moment où $x$
+	n'est pas dans $A$ on ne sait plus rien dire. En effet, on ne peut pas dire à un moment qu'on
 	arrête l'algorithme et que l'élément n'est pas dans $A$.
        	Car il est possible que $x$ soit dans $A$ et que l'algorithme ne
 	l'ait pas encore déterminé (l'algorithme retourne tôt ou tard un
@@ -127,7 +131,7 @@ Soit $A\subseteq \N$
 \begin{myprop}
 	$A$ est un ensemble récursivement énumérable ssi
     \begin{itemize}
-      \item $A$ est vide ou
+      \item $A$ est vide ;
       \item $A = \image(f)$ et $f$ est une fonction totale calculable.
     \end{itemize}
 
@@ -151,8 +155,7 @@ Soit $A\subseteq \N$
 \label{par:propri_t_s_importantes}
 \begin{myprop}
 \label{prop:recursif_implique_recursivement_enumerable}
-	$A$ récursif $\Rightarrow$ $A$ récursivement énumérable. (Propriété plus
-		faible)
+	$A$ récursif $\Rightarrow$ $A$ récursivement énumérable. (La première notion (récursif) est plus forte que la deuxième (récursivement énumérable))
 \end{myprop}
 
 \begin{myprop}
@@ -194,7 +197,7 @@ Soit $A\subseteq \N$
 % Une fonction dont le domaine est un ensemble récursif en input est-elle calculable: non
 
 \begin{myprop}
-	$\stcomp{A}$ fini $\Rightarrow$ $A$ récursif. (Comme propriété précédente)
+	$\stcomp{A}$ fini $\Rightarrow$ $A$ récursif. (Même démonstration que pour la propriété précédente)
 \end{myprop}
 
 \begin{myexem}
@@ -214,14 +217,14 @@ Soit $A\subseteq \N$
     \STATE print 0
     \ENDIF
   \end{algorithmic}
-
+a est la limite d'occurences de nombre de 5 successifs dans $\pi$. On aura une infinité de programmes comme celui ci dessus avec des valeurs de a toutes différentes et l'un de ces programmes sera calculable et donnera la solution attendue.
   Si on remplace ``au moins'' par ``exactement'', est-ce toujours calculable ?
   Oui, il suffit de remplacer $\leq$ par $=$ dans le second algorithme.
 	Dans tous les cas, un algorithme fournissant $f(x)$ comme résultat existe, bien que nous ne savons exactement pas duquel il s'agit.
 \end{myexem}
 
 \begin{myprop}
-  Tout programme qui a un nombre fini d'inputs différents est calculable : on fait comme dans la propriété 40, mais en remplaçant les $1$ par ce que doit renvoyer la fonction pour tel input (ça ne marche pas s'il est infini car le taille du code du programme doit être fini donc on ne peut pas tout hardcoder).
+  Tout programme qui a un nombre fini d'inputs différents est calculable : on fait comme dans la propriété 40, mais en remplaçant les $1$ par ce que doit renvoyer la fonction pour tel input (ça ne marche pas s'il est infini car la taille du code du programme doit être finie donc on ne peut pas tout hardcoder).
 \end{myprop}
 
 % paragraph propri_t_s_importantes (end)
@@ -266,15 +269,15 @@ Dans le cours on utilise un langage de programmation, Java, comme modèle.
 \end{mydef}
 
 \begin{mydef}[$P_k$]
-	$P_k$ est le programme numéro $k$ dans $P$.
+	$P_k$ est le programme numéro $k$ dans $P$ (univers des programmes).
 \end{mydef}
 
 \begin{mydef}[$\varphi^{(n)}_k$]
-	$\varphi^{(n)}_k$ : $\N^n \rightarrow \N$ est la fonction calculée par $P_k$.
+	$\varphi^{(n)}_k$ : $\N^n \rightarrow \N$ est la fonction calculée par $P_k$ (univers des fonctions).
 \end{mydef}
 
 \begin{myrem}
-  $P_{12} \neq P_{47}$ mais ça ne veut \emph{pas} dire que $\varphi_{12} \neq \varphi_{47}$. En effet, il existe une infinité de manière de coder une fonction.
+  $P_{12} \neq P_{47}$ (deux programmes avec deux codes sources différents) mais ça ne veut \emph{pas} dire que $\varphi_{12} \neq \varphi_{47}$. En effet, il existe une infinité de manière de coder une fonction.
 \end{myrem}
 
 \begin{myprop}
@@ -305,7 +308,7 @@ On va maintenant montrer que ce n'est pas parce que la table d'une fonction est 
 \label{sec:probl_me_de_l_arr_t}
 
 \begin{mydef}[halt]
-	halt est la fonction : $P \times \N$ $\rightarrow$ $\N$ telle que \\
+	halt est la fonction : $P \times \N$ $\rightarrow$ $\N$ avec deux arguments n (numéro de programme) et x (donnée (entier)) telle que \\
 	\begin{tabular}{rl}
 	  halt(n, x) = 1 & si $P_n(x)$ se termine \\
 	  halt(n, x) = 0 & sinon \\
@@ -324,9 +327,9 @@ On va maintenant montrer que ce n'est pas parce que la table d'une fonction est 
 \end{myrem}
 
 \begin{mytheo}[halt]
-	halt n'est pas calculable.
+	halt, qui décide si un programme se termine ou non, n'est pas calculable.
 	\begin{proof}
-	On suppose halt calculable.
+	Démonstration par l'absurde. On suppose halt calculable.
 	\begin{enumerate}
 		\item On peut donc construire une table infinie définissant la fonction
 			halt : \\
@@ -345,6 +348,7 @@ On va maintenant montrer que ce n'est pas parce que la table d'une fonction est 
 		\item Sélection de la diagonale
 			\[ diag :halt(0,0),halt(1,1),\cdots ,halt(k,k), \cdots \]
 			\[diag(n) = halt(n,n)\]
+diag(n) est calculable par hypothèse que halt est calculable.
 		\item Modification de cet élément diag pour obtenir
 			$diag'(n) =$
 			\begin{tabular}{c}
@@ -354,7 +358,7 @@ On va maintenant montrer que ce n'est pas parce que la table d'une fonction est 
 			$diag'$ est calculable, car halt est calculable (il y a moyen
 			d'écrire un programme qui calcule $diag'$ en utilisant $diag$).
 		\item Contradiction :\\
-		       	Donc il existe un programme $P_d$ qui calcule
+		       	Donc il existe un programme $P_d$ (on ne sait pas lequel mais il existe car diag' est calculable) qui calcule
 			$diag'$:
 			$diag'(d) =$
 			\begin{tabular}{c}
@@ -387,15 +391,15 @@ On va maintenant montrer que ce n'est pas parce que la table d'une fonction est 
 
 \end{mytheo}
 
-\paragraph{Conclusion} Il n'existe pas d'algorithme qui détermine si n'importe quel programme $P_n$ se termine ou non. Mais dans certains formalismes qui ne sont pas des modèles complets la fonction halt de ce formalisme est calculable.
+\paragraph{Conclusion} Il n'existe pas d'algorithme qui permet de déterminer pour tout programme $P_n$ et donnée x si $P_n(x)$ se termine ou non. Mais dans certains formalismes qui ne sont pas des modèles complets, la fonction halt de ce formalisme est calculable.
 Par exemple un langage qui ne permet de calculer
-que des fonctions totales (exemple java sans aucune boucle), halt est calculable (halt retourne toujours 1). \\
+que des fonctions totales (exemple : java sans aucune boucle (MiniJava)), halt est calculable (halt retourne toujours 1). \\
 
 De plus, il faut faire attention, car ce n'est pas parce que halt n'est pas calculable que pour un programme donné k, $halt(k,x)$ est non calculable. 
 Par exemple, si $P_{32}$ se termine pour tout input, alors $halt(32, x)$ est calculable (ce n'est pas pour autant qu'on est capable d'écrire l'algorithme).
 
 \begin{myrem}
-	Cette partie du cours est très importante, car on a trouvé un ``trou dans le mur des fonctions calculables'' et on va étendre le trou (métaphore
+	Cette partie du cours est très importante, car on a trouvé avec halt un ``trou dans le mur des fonctions calculables''. Cela parait anodin au premier abord mais on va en réalité étendre ce trou jusqu'à détruire le mur(métaphore
 	de M. Deville). C'est-à-dire que maintenant on va utiliser halt pour montrer que d'autres fonctions sont calculables/non calculables. Par exemple	par réduction par rapport à halt: si on montre qu'une fonction équivalente à halt est calculable, alors halt est calculable.
 \end{myrem}
 
@@ -480,7 +484,7 @@ Pourquoi ne créerions nous pas un langage qui ne peut en aucun cas boucler à l
 Un exemple de modèle de calcul ne permettant que le calcul de fonctions totales est par exemple \textbf{BLOOP} ou encore \textbf{MiniJava}, c'est-à-dire Java sans récursivité ni boucle while et où les boucles for ne peuvent modifier le compteur de boucle.
 \end{myexem}
 
-Posons Q un langage (\textbf{non trivial}, langage ou les opérations de base tel que l'addition peuvent être effectuées) dont tous les programmes se terminent (ils ne calculent que des fonctions totales) et pour lequel il existe un interpréteur calculable, $interpret(n,x){} =\varphi'_n(x)$, où 
+Posons Q un langage (\textbf{non trivial}, langage ou les opérations de base telle que l'addition peuvent être effectuées) dont tous les programmes ($Q_0, Q_1, ..., Q_n$) se terminent (ils ne calculent que des fonctions totales) et pour lequel il existe un interpréteur calculable, $interpret(n,x){} =\varphi'_n(x)$, où 
 $\varphi'_n$ est la fonction calculée par le programme $Q_n$. En partant du fait que tous les programmes se terminent, l'interpréteur est donc une fonction totale puisqu'il donne toujours une réponse.
 
 \begin{mytheo}[Hoare-Allison]
@@ -525,7 +529,17 @@ On suppose \textit{interpret} calculable dans Q.
 \end{proof}
 
 \begin{myrem}
-	Si les programmes de Q ne calculaient pas que des fonctions totales, alors ça n'aurait pas posé de problèmes, car si $interpret(d,d)=\bot$, $interpret(d,d)+1=\bot$ et il n'y a plus de contradiction.  Un programme qui ne se termine pas + quelque chose, reste un programme qui ne se termine pas.
+	Si les programmes de Q ne calculaient pas que des fonctions totales (dans le cas de Q = Java par exemple), alors ça n'aurait pas posé de problèmes, car si $interpret(d,d)=\bot$, $interpret(d,d)+1=\bot$ et il n'y a plus de contradiction.  Un programme qui ne se termine pas + quelque chose, reste un programme qui ne se termine pas.
+\end{myrem}
+
+\begin{myrem}
+Un interpréteur est un programme  utilisant des principes "simples" de programmation :
+\begin{itemize}
+    \item lecture d'un fichier ;
+    \item structures de données ;
+    \item gestion de tables ;
+    \item opérations élémentaires.
+\end{itemize}
 \end{myrem}
 
 \subsection[Implication du théorème de Hoare Allison]{Implication du théorème \ref{Hoare_Allison}, Hoare Allison}
@@ -545,11 +559,11 @@ On suppose \textit{interpret} calculable dans Q.
 
 \begin{myprop}
 	Dans un langage de programmation non trivial, il est donc impossible que
-	l'interpréteur et la fonction halt puissent tous deux être programmés.
+	l'interpréteur et la fonction halt puissent tous deux être programmés dans ce langage.
 \end{myprop}
 
 \begin{myprop}
-	Si on veut pouvoir programmer toutes les fonctions totales dans un langage, le langage doit permettre la programmation de fonctions non totales.
+	Si on veut qu'un langage de programmation permette la programmation de toutes les fonctions totales calculables, alors ce langage doit également permettre la programmation de fonctions non totales.
 \end{myprop}
 
 \begin{myprop}
@@ -575,11 +589,19 @@ On suppose \textit{interpret} calculable dans Q.
 \begin{mytheo}
 	Il existe une fonction partielle calculable g telle qu'aucune fonction totale calculable n'est une extension de g.
   \begin{proof}
-    Soit $nbStep(n,x)$  = nombre d'instructions exécutées par $\varphi_n(x)$.\\
-    Cette fonction vaut $\bot$ si $P_n(x) = \bot$. Il s'agit donc d'une fonction partielle calculable. S'il existe une extension totale calculable de cette fonction, alors la fonction $halt$ serait calculable.\\
-    En effet, soit $nbStepPrime(n,x)$ une extension totale calculable de $nbStep$. Pour calculer $halt(n,x)$, il suffit d'exécuter $nbStepPrime(n,x)$ instructions de $P_n(x)$.  Si à cette étape $P_n(x)$ s'arrête, c'est que $nbStepPrime(n,x)=nbStep(n,x)$ et que $P_n(x)$ se termine.  Si $P_n(x)$ ne s'arrête pas à cette étape, c'est que $nbStep(n,x)=\bot$ et donc que $P_n(x)$ ne se termine pas. On a donc un algorithme pour calculer $halt$, ce qui est impossible.  Donc une telle extension totale de $nbStep$ n'existe pas.
+    Soit $nbStep(n,x)$  = k si $P_n(x)$ se termine après k instructions et $\bot$ si $P_n(x) = \bot$. Il s'agit donc d'une fonction partielle calculable. S'il existe une extension totale calculable de cette fonction, alors la fonction $halt$ serait calculable.\\
+    En effet, soit $nbStepPrime(n,x)$ une extension totale calculable de $nbStep(n,x)$. Pour calculer $halt(n,x)$, il suffit d'exécuter $nbStepPrime(n,x)$ instructions de $P_n(x)$.  Si à cette étape $P_n(x)$ s'arrête, c'est que $nbStepPrime(n,x)=nbStep(n,x)$ et que $P_n(x)$ se termine.  Si $P_n(x)$ ne s'arrête pas à cette étape, c'est que $nbStep(n,x)=\bot$ et donc que $P_n(x)$ ne se termine pas. On a donc un algorithme pour calculer $halt$, ce qui est impossible.  Donc une telle extension totale de $nbStep$ n'existe pas.
   \end{proof}
 \end{mytheo}
+
+\begin{myrem}
+La démonstration ci-dessus se base sur la technique de réduction. Celle-ci peut s'écrire en 3 étapes clés : 
+\begin{enumerate}
+    \item si $nbStepPrime(n,x)$ est calculable, alors $halt(n,x)$ est également calculable ;
+    \item on sait que $halt(n,x)$ est non calculable ;
+    \item par les deux sous points précédents, $nbStepPrime(n,x)$ est non calculable.
+\end{enumerate}
+\end{myrem}
 
 \begin{myrem}
 	Ceci implique que si on a une fonction partielle g, il n'est pas
@@ -601,13 +623,13 @@ Voici quelques exemples avant d'attaquer le cas général. Pour chaque exemple, 
 
 Technique de réduction : 
 \begin{enumerate}
-    \item Nous savons que la fonction halt est non calculable.
-    \item Nous démontrons que si la fonction f est calculable, alors halt l'est aussi.
-    \item La fonction f est donc non calculable.
+    \item nous démontrons que si la fonction f est calculable, alors halt l'est aussi ;
+    \item nous savons que la fonction halt est non calculable ;
+    \item la fonction f est donc non calculable.
 \end{enumerate}
 
 \begin{myexem}
-Soit la fonction :
+Soit la fonction suivante qui a pour objectif de dire si oui ou non un programme boucle toujours :
 \begin{equation*}
 f(n) =\left\{\begin{tabular}{l}
 		$1$ si $\varphi_n(x)=\bot$ pour tout $x$,\\
@@ -617,9 +639,9 @@ f(n) =\left\{\begin{tabular}{l}
 
 En supposant que $f$ est calculable, on montre que $halt$ est calculable. Soit le programme F qui calcule la fonction f. Nous construisons $ HALT(n,x) \equiv $
 		\begin{itemize}
-		\item Construire le programme $P(z) \equiv P_{n}(x)$
-		\item Soit d le numéro de $P(z)$
-		\item Si F(d) = 1 alors print(0) sinon print(1)
+		\item construire le programme $P(z) \equiv P_{n}(x)$ ;
+		\item soit d le numéro de $P(z)$ ;
+		\item si F(d) = 1 alors print(0) sinon print(1).
 		\end{itemize}
 \end{myexem}
 
@@ -633,9 +655,9 @@ f(n) =\left\{\begin{tabular}{l}
 \end{equation*}
 En supposant que $f$ est calculable, on montre que $halt$ est calculable. Soit le programme F qui calcule la fonction f. Nous construisons $ HALT(n,x) \equiv $
 		\begin{itemize}
-		\item Construire le programme $P(z) \equiv P_{n}(x); return z;$
-		\item Soit d le numéro de $P(z)$
-		\item Si F(d) = 1 alors print(1) sinon print(0)
+		\item construire le programme $P(z) \equiv P_{n}(x); print(z);$
+		\item soit d le numéro de $P(z)$ ;
+		\item si F(d) = 1 alors print(1) sinon print(0).
 		\end{itemize}
 
 Si $P_n(x)$ s'arrête, $P(z)$ renverra toujours son input donc $F(d)$ renverra 1. Sinon, renverra $F(d)$ renverra 0. 
@@ -651,10 +673,10 @@ f(n,m) =\left\{\begin{tabular}{l}
 \end{equation*}
 En supposant que $f$ est calculable, on montre que $halt$ est calculable. Soit le programme F qui calcule la fonction f. Nous construisons $ HALT(n,x) \equiv $
 		\begin{itemize}
-		\item Construire le programme $P_{d}(z) \equiv P_{n}(x); $
-		\item Construire le programme $P_{d\prime}(z) \equiv \lstinline{while true do;} $
-		\item Soit d le numéro de $P_{d}(z)$, et d' le numéro de $P_{d\prime}(z)$.
-		\item Si F(d,d') = 1 alors print(0) sinon print(1)
+		\item construire le programme $P_{d}(z) \equiv P_{n}(x); $
+		\item construire le programme $P_{d\prime}(z) \equiv \lstinline{while true do;} $
+		\item soit d le numéro de $P_{d}(z)$, et d' le numéro de $P_{d\prime}(z)$ ;
+		\item si F(d,d') = 1 alors print(0) sinon print(1).
 		\end{itemize}
 
 Si $P_n(x)$ s'arrête, $F(d,d')=0$. Sinon, $\varphi_{d}=\varphi_{d'}$ et donc $F(d,d')=1$. Il suffit de renvoyer $1-f(d,d')$ pour avoir Halt.
