Update 04_modeles.tex Adding informations, fixing typos

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -1024,7 +1024,7 @@ La seule hypothèse faites dans cette démonstration est : A est récursif. Vu q
   \end{proof}
 \end{myrem}
 
-\begin{myrem}[Démonstration de $K = \{n | \phi_n(n) \neq \bot \}$ grâce au point fixe]
+\begin{myrem}[Démonstration de $K = \{n | \varphi_n(n) \neq \bot \}$ grâce au point fixe]
 	On peut démontrer que $K$ n'est pas récursif.
 
     \begin{proof}
