Update 06_complexite.tex Adding missing informations

--- a/05_Analyse.tex
+++ b/05_Analyse.tex
@@ -142,7 +142,7 @@ BLOOP et les fonctions primitives récursives sont des ``mauvais'' formalismes c
 \section{Techniques de preuves}
 \label{sub:techniques_de_preuve}
 
-Pour prouver qu'un problème, une fonction est non calculable, on peut utiliser :
+Pour prouver qu'un problème ou une fonction est non calculable, on peut utiliser :
 \begin{itemize}
 	\item Le théorème de Rice.
 	\item La démonstration directe de la non-calculabilité par 
